--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "airtable": "^0.11.1",
+    "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "pug": "^3.0.2"
   }
